Fix: wrong padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 20%;
+    margin: 20px;
     background-color: #f5f5f5;
     color: #333;
 }
